fix homes not showing up

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -526,13 +526,10 @@
 		font-size: 14px;
 	}
 	/* HOMES MAIN INFO AREA */
-	#homes-header {
-	    width:700px;
-		height:50px;
-	
-	}
+
 	#add_home_button {
 		float: right;
+		margin-bottom:35px;
 			
 	}
 	#home_note {
